--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
       </style>
-    <title>Cocid-Vaccines</title>
+    <title>Cocid-19-Vaccines</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
